# akaza-ime

./: .gitignore  Cargo.toml  README.md  build.rs
res/: akaza.rc
src/: candidate_window.rs  class_factory.rs  edit_session.rs  globals.rs  guid.rs  input_state.rs  lib.rs  register.rs  text_service.rs
